--- a/Report.Rmd
+++ b/Report.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Project2 :Breast Cancer Prediction Model "
+title: "Project2: Breast Cancer Prediction Model "
 author: "Group 7: Melanie Mayer, Yuqi Miao, Sibei Liu, Xue Jin"
 date: "March 31, 2020"
 output: pdf_document
@@ -15,7 +15,7 @@ Breast cancer is the most common invasive cancer and the second leading cause of
 
 ## Objectives
 
-The main objective of this project is to build an accurate predictive model based on logistic regression that classifies between malignant and benign images of breast tissue. Using the Breast Cancer Diagnosis dataset, logistics model and logistic-LASSO model will be implemented to predict the diagnosis. A Newton-Raphson algorithm and Pathwise Coordinate optimization will be developed to estimate the logistic model and the lasso model respectively. We aim to find the model with the best performance in terms of predicting when breast tissue is malignant.
+The main objective of this project is to build an accurate predictive model based on logistic regression that classifies between malignant and benign images of breast tissue. Using the Breast Cancer Diagnosis dataset, logistics model and logistic-LASSO model will be implemented to predict the diagnosis. A Newton-Raphson algorithm and Pathwise Coordinate optimization will be developed to estimate the logistic model and the lasso-logistic model respectively. We aim to find the model with the best performance in terms of predicting when breast tissue is malignant.
 
 ## Breast Cancer Diagnosis Dataset
 
@@ -59,17 +59,17 @@ $$\nabla^2 l(\boldsymbol\theta|\boldsymbol X) = -\sum_{i=1}^n \pi_i(1 - \pi_i)\b
 
 ### Full model
 
-In order to estimate $\boldsymbol \beta$ we need to maximize the loglikelihood function. There is no closed form, hence we turn to numerical methods. The Newton-Raphson method is used to fit the full model. To find the maximum likelihood estimate of each element of $\boldsymbol \beta$, an iterative process is set as follows:
+In order to estimate $\boldsymbol \beta$ we need to maximize the loglikelihood function. There is no closed form, hence we turn to numerical methods. The Newton-Raphson method is used to fit the full logistic model. To find the maximum likelihood estimate of each element of $\boldsymbol \beta$, an iterative process is set as follows:
 
 $$\theta_{i+1}  = \theta_{i} -\delta (\nabla^2l(\theta_{i}|\boldsymbol X)-\gamma I)^{-1}\nabla l(\theta_{i}|\boldsymbol X) $$
-This is the Newton-Raphson method with two modifications. $\delta$ is included in the process to accomplish the step-halving modification, the step coefficient ensures the likelihood function is always increasing in order to achieve quicker convergence. $\gamma$ is the modification coefficient to ensure the aescent direction of the iteration vector at $\theta_{i}$.
+This is the Newton-Raphson method with two modifications. $\delta$ is included in the process to accomplish the step-halving modification, the step coefficient ensures the likelihood is always increasing in order to achieve quicker convergence. $\gamma$ is the modification coefficient to ensure the aescent direction of the iteration vector at $\theta_{i}$.
 
 
 ### Logit-lasso pathwise coordinate-wise update algorithm
 
-In the case of large dimensionality of predictors or multicollinearity it can be beneficial to perform a regularization method which either shrinks coefficients or performs variable selection. Here we implement the Least Absolute Shrinkage and Selection Operator (LASSO) method for logistic regression with a path-wise coordinate-wise optimization algorithm to select variables from the full model and increase the prediction efficiency.
+In the case of large dimensionality of predictors or multicollinearity it can be beneficial to perform a regularization method which shrinks coefficients and performs variable selection. Here we implement the Least Absolute Shrinkage and Selection Operator (LASSO) method for logistic regression with a path-wise coordinate-wise optimization algorithm to select variables from the full model and increase the prediction efficiency and avoid overfitting. Seeing how we have 30 predictors describing 10 features, we are likely to experience multicollinearity and expect LASSO to outperform the classical logistic regression. 
 
-In LASSO we add a penalization term such that we try to find the coefficients to minimize:
+In LASSO we add an L1 penalization term to the squared loss function, such that we try to find the coefficients to minimize:
 
 $$min _{(\boldsymbol \beta)}\{-l({\boldsymbol \beta})+\lambda\sum_{j=0}^{p}|\beta_j| \}$$
 Where we find the likelihood to be: 
